[package]
name = "phaselock-testing"
version = "0.1.0"
edition = "2021"
description = "Types and traits for the PhaseLock consesus module"
authors = ["Victor Koenders <vkoenders@espressosys.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phaselock = { path = "../" }
phaselock-types = { path = "../phaselock-types" }
phaselock-utils = { path = "../phaselock-utils", features = ["logging-utils"] }
libp2p-networking = {path = "../libp2p-networking", version = "0.1.0"}
libp2p = { version = "0.45.1", features = ["serde"] }
async-std = "1.11.0"
tracing = "0.1.32"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive", "rc"] }
snafu = { version = "0.7.0", features = ["backtraces"] }
either = { version = "1.7.0" }

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"] }
rand_xoshiro = "0.6.0"
tracing-error = "0.2.0"
tracing-unwrap = "0.9.2"
tempfile = "3.3.0"
proptest = "1.0.0"

