[package]
authors = ["Nathan McCarty <nathan.mccarty@translucence.net>"]
description = "Types and traits for the PhaseLock consesus module"
edition = "2021"
name = "phaselock-types"
readme = "../README.md"
version = "0.0.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
async-tungstenite = "0.16.1"
blake3 = "1.3.1"
futures = "0.3.21"
hex_fmt = "0.3.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
snafu = "0.7.0"
threshold_crypto = "0.4.0"

[dependencies.bincode]
version = "2.0.0-beta"
features = ["serde"] # needed for threshold_crypto
