[package]
authors = ["Nathan McCarty <nathan.mccarty@translucence.net>"]
description = "Types and traits for the PhaseLock consesus module"
edition = "2021"
name = "phaselock-types"
readme = "../README.md"
version = "0.0.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["demo"]
demo = ["ed25519-compact"]

[dependencies]
async-std = "1.11.0"
async-tungstenite = "0.17.2"
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore", tag = "0.1.2" }
bincode = "1.3.3"
blake3 = "1.3.1"
futures = "0.3.21"
hex_fmt = "0.3.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
snafu = "0.7.0"
custom_debug = "0.5"
async-trait = "0.1.56"
ed25519-compact = { version = "1.0.11", optional = true }
tracing = "0.1.34"
