[package]
authors = ["Nathan McCarty <nathan.mccarty@translucence.net>"]
description = "Accompanying utilities used by phaselock."
edition = "2021"
name = "phaselock-utils"
readme = "../README.md"
version = "0.0.6"

[dependencies]
flume = "0.10.12"
tracing = "0.1.32"
async-std = { version = "1.11.0", features = ["unstable"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"], optional = true}
futures = "0.3.21"
async-trait = "0.1.53"
color-eyre = "0.6.1"

[dev-dependencies]
# need async-std test attribute for subscriber mutex tests
async-std = { version = "1.11.0", features = ["attributes"] }

[features]
# needed for logging feature
logging-utils = ["tracing-subscriber"]
