[package]
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Async task implementations for consensus"
edition = "2021"
name = "hotshot-task-impls"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

full-ci = ["async-std-executor", "channel-async-std"]
tokio-ci = ["tokio-executor", "channel-tokio"]
profiling = ["async-compatibility-layer/profiling"]
async-std-executor = [
    "dep:async-std",
    "hotshot-types/async-std-executor",
    "hotshot-consensus/async-std-executor",
    "hotshot-task/async-std-executor",
    "async-compatibility-layer/async-std-executor",
]
tokio-executor = [
    "dep:tokio",
    "hotshot-consensus/tokio-executor",
    "hotshot-types/tokio-executor",
    "hotshot-task/tokio-executor",
    "async-compatibility-layer/tokio-executor",
]
channel-flume = [
    "async-compatibility-layer/channel-flume",
    "hotshot-consensus/channel-flume",
    "hotshot-types/channel-flume",
    "hotshot-task/channel-flume",
]
channel-tokio = [
    "async-compatibility-layer/channel-tokio",
    "hotshot-consensus/channel-tokio",
    "hotshot-types/channel-tokio",
    "hotshot-task/channel-tokio",
]
channel-async-std = [
    "async-compatibility-layer/channel-async-std",
    "hotshot-consensus/channel-async-std",
    "hotshot-types/channel-async-std",
    "hotshot-task/channel-async-std",
]

[dependencies]
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", default-features = false, features = [ "logging-utils" ], tag = "1.2.0" }
async-std = { version = "1.12.0", optional = true, features = ["unstable"] }
async-trait = "0.1.68"
either = { version = "1.8.1", features = [ "serde" ] }
futures = "0.3.28"
nll = { git = "https://github.com/EspressoSystems/nll.git" }
serde = { version = "1.0.164", features = ["derive"] }
snafu = "0.7.4"
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
async-lock = "2.7.0"
tracing = "0.1.37"
atomic_enum = "0.2.0"
pin-project = "1.1.0"
async-stream = "0.3.5"
hotshot-types = { path = "../types", default-features = false }
hotshot-consensus = { path = "../consensus", default-features = false }
hotshot-task = { path = "../task", default-features = false }
time = "0.3.21"
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.2" }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.1.2-patch.1", features = [
  "std",
] }
rand_chacha = "0.3.1"

