[package]
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Async task abstraction for use in consensus"
edition = "2021"
name = "hotshot-task"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

full-ci = ["async-std-executor", "channel-async-std"]
tokio-ci = ["tokio-executor", "channel-tokio"]
profiling = ["async-compatibility-layer/profiling"]
async-std-executor = [
    "dep:async-std",
    "async-compatibility-layer/async-std-executor",
]
tokio-executor = ["dep:tokio", "async-compatibility-layer/tokio-executor"]
channel-flume = ["async-compatibility-layer/channel-flume"]
channel-tokio = ["async-compatibility-layer/channel-tokio"]
channel-async-std = ["async-compatibility-layer/channel-async-std"]

[dependencies]
async-compatibility-layer = { workspace = true }
async-std = { version = "1.12.0", optional = true, features = ["unstable"] }
async-trait = { workspace = true }
either = { workspace = true }
futures = "0.3.28"
nll = { git = "https://github.com/EspressoSystems/nll.git" }
serde = { version = "1.0.183", features = ["derive"] }
snafu = "0.7.5"
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
async-lock = { workspace = true }
tracing = "0.1.37"
atomic_enum = "0.2.0"
pin-project = "1.1.3"
