[package]
name = "hotshot-testing-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for creating hotshot tests"

[features]
default = []
full-ci = ["async-std-executor", "demo", "channel-async-std"]
tokio-ci = ["tokio-executor", "demo", "channel-tokio"]
demo = ["hotshot/demo"]

# NOTE this is used to activate the slow tests we don't wish to run in CI
slow-tests = []
profiling = ["async-compatibility-layer/profiling"]
tokio-executor = [
  "dep:tokio",
  "hotshot/tokio-executor",
  "hotshot-consensus/tokio-executor",
  "hotshot-types/tokio-executor",
  "hotshot-testing/tokio-executor",
  "async-compatibility-layer/tokio-executor",
]
async-std-executor = [
  "dep:async-std",
  "hotshot/async-std-executor",
  "hotshot-consensus/async-std-executor",
  "hotshot-types/async-std-executor",
  "hotshot-testing/async-std-executor",
  "async-compatibility-layer/async-std-executor",
]
channel-flume = [
  "hotshot-consensus/channel-flume",
  "hotshot-types/channel-flume",
  "hotshot-testing/channel-flume",
  "async-compatibility-layer/channel-flume",
]
channel-tokio = [
  "hotshot-consensus/channel-tokio",
  "hotshot-types/channel-tokio",
  "hotshot-testing/channel-tokio",
  "async-compatibility-layer/channel-tokio",
]
channel-async-std = [
  "hotshot-consensus/channel-async-std",
  "hotshot-types/channel-async-std",
  "hotshot-testing/channel-async-std",
  "async-compatibility-layer/channel-async-std",
]

[dependencies]
ark-bls12-381 = { version = "0.3.0" }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.0.1", default-features = false }
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.64"
# needed for vrf demo
# so non-optional for now
blake3 = { version = "1.3.3", features = ["traits-preview"] }
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.2" }
either = { version = "1.8.1" }
futures = "0.3.27"
hotshot = { path = "../", default-features = false }
hotshot-consensus = { path = "../consensus", default-features = false }
hotshot-types = { path = "../types", default-features = false }
hotshot-testing = { path = "../testing", default-features = false }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.1.2-patch.1", features = [
  "std",
] }
nll = { git = "https://github.com/EspressoSystems/nll.git" }
rand = "0.8.5"
snafu = "0.7.4"
tokio = { version = "1", optional = true, features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tracing = "0.1.37"
serde = { version = "1.0.157", features = ["derive"] }
# proc macro stuff
quote = "1.0.26"
syn = { version = "1.0.108", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.52"
derive_builder = "0.12.0"

[dev-dependencies]
async-lock = "2.6"
proptest = "1.1.0"
tempfile = "3.3.0"

[lib]
proc-macro = true
