[package]
name = "hotshot-testing"
version = "0.1.0"
edition = "2021"
description = "Types and traits for the HotShot consesus module"
authors = ["Victor Koenders <vkoenders@espressosys.com>"]

[features]
default = []
full-ci = ["async-std-executor", "demo"]
tokio-ci = ["tokio-executor", "demo"]
demo = ["hotshot/demo"]

# NOTE this is used to activate the slow tests we don't wish to run in CI
slow-tests = []
profiling = ["hotshot-utils/profiling"]

tokio-executor = [
  "dep:tokio",
  "hotshot/tokio-executor",
  "hotshot-consensus/tokio-executor",
  "hotshot-types/tokio-executor",
  "hotshot-utils/tokio-executor",
]
async-std-executor = [
  "dep:async-std",
  "hotshot/async-std-executor",
  "hotshot-consensus/async-std-executor",
  "hotshot-types/async-std-executor",
  "hotshot-utils/async-std-executor",
]
channel-flume = [
  "hotshot-consensus/channel-flume",
  "hotshot-types/channel-flume",
  "hotshot-utils/channel-flume",
]
channel-tokio = [
  "hotshot-consensus/channel-tokio",
  "hotshot-types/channel-tokio",
  "hotshot-utils/channel-tokio",
]
channel-async-std = [
  "hotshot-consensus/channel-async-std",
  "hotshot-types/channel-async-std",
  "hotshot-utils/channel-async-std",
]

[dependencies]
ark-bls12-381 = { version = "0.3.0" }
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.58"
# needed for vrf demo
# so non-optional for now
blake3 = { version = "1.3.2", features = ["traits-preview"] }
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.2" }
either = { version = "1.8.0" }
futures = "0.3.25"
hotshot = { path = "../", features = [
  "hotshot-testing",
], default-features = false }
hotshot-consensus = { path = "../consensus", default-features = false }
hotshot-types = { path = "../types", default-features = false }
hotshot-utils = { path = "../utils", default-features = false, features = [
  "logging-utils",
] }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.1.2", features = [
  "std",
] }
rand = "0.8.5"
snafu = "0.7.3"
tokio = { version = "1", optional = true, features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tracing = "0.1.37"
serde = { version = "1.0.148", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
tempfile = "3.3.0"
