[package]
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Types and traits for the HotShot consesus module"
edition = "2021"
name = "hotshot-types"
readme = "../README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

full-ci = ["demo", "async-std-executor", "channel-async-std"]
tokio-ci = ["demo", "tokio-executor", "channel-tokio"]
profiling = ["async-compatibility-layer/profiling"]
async-std-executor = [
    "dep:async-std",
    "async-compatibility-layer/async-std-executor",
    "hotshot-task/async-std-executor",
    "libp2p-networking/async-std-executor",
]
tokio-executor = [
    "dep:tokio",
    "async-compatibility-layer/tokio-executor",
    "hotshot-task/tokio-executor",
    "libp2p-networking/tokio-executor",
]
demo = ["ed25519-compact"]
channel-flume = [
    "async-compatibility-layer/channel-flume",
    "hotshot-task/channel-flume",
    "libp2p-networking/channel-flume",
]
channel-tokio = [
    "async-compatibility-layer/channel-tokio",
    "hotshot-task/channel-tokio",
    "libp2p-networking/channel-tokio",
]
channel-async-std = [
    "async-compatibility-layer/channel-async-std",
    "hotshot-task/channel-async-std",
    "libp2p-networking/channel-async-std",
]

[dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.3.0", default-features = false, features = [ "logging-utils" ] }
async-lock = "2.7"
async-std = { version = "1.12.0", optional = true, features = ["unstable"] }
async-trait = "0.1.68"
ark-serialize = { version = "0.3", features = ["derive"] }
ark-std = "0.4"
bincode = "1.3.3"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "atomic", "serde"] }
blake3 = "1.4.0"
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.2" }
custom_debug = "0.5"
derivative = "2.2.0"
digest = { version = "0.10" }
displaydoc = { version = "0.2.3", default-features = false }
ed25519-compact = { version = "2.0.4", optional = true }
either = { version = "1.8.1", features = [ "serde" ] }
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.1" }
futures = "0.3.28"
generic-array = "0.14.7"
hex_fmt = "0.3.0"
hotshot-utils = { path = "../utils" }
hotshot-task = { path = "../task", default-features = false }
hotshot-primitives = { git = "https://github.com/EspressoSystems/hotshot-primitives",  branch = 'hotshot-compat'} # rev = "4aee90c" for 'hotshot-compat'
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", branch = 'hotshot-compat'} # rev = "470a833" for branch = 'hotshot-compat'
nll = { git = "https://github.com/EspressoSystems/nll.git" }
libp2p-networking = { path = "../libp2p-networking", version = "0.1.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
snafu = "0.7.4"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.2.4" }
time = "0.3.22"
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tracing = "0.1.37"

[dev-dependencies]
serde_json = "1.0.96"
