[package]
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Types and traits for the HotShot consesus module"
edition = "2021"
name = "hotshot-types"
readme = "../README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

full-ci = ["demo", "async-std-executor", "channel-async-std"]
tokio-ci = ["demo", "tokio-executor", "channel-tokio"]
profiling = ["async-compatibility-layer/profiling"]
async-std-executor = [
    "dep:async-std",
    "async-compatibility-layer/async-std-executor",
    "hotshot-task/async-std-executor",
    "libp2p-networking/async-std-executor",
]
tokio-executor = [
    "dep:tokio",
    "async-compatibility-layer/tokio-executor",
    "hotshot-task/tokio-executor",
    "libp2p-networking/tokio-executor",
]
demo = ["ed25519-compact"]
channel-flume = [
    "async-compatibility-layer/channel-flume",
    "hotshot-task/channel-flume",
    "libp2p-networking/channel-flume",
]
channel-tokio = [
    "async-compatibility-layer/channel-tokio",
    "hotshot-task/channel-tokio",
    "libp2p-networking/channel-tokio",
]
channel-async-std = [
    "async-compatibility-layer/channel-async-std",
    "hotshot-task/channel-async-std",
    "libp2p-networking/channel-async-std",
]

[dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
async-compatibility-layer = { workspace = true }
async-lock = { workspace = true }
async-std = { version = "1.12.0", optional = true, features = ["unstable"] }
async-trait = { workspace = true }
ark-serialize = { version = "0.3", features = [
    "derive",
] } # TODO GG upgrade to 0.4 and inherit this dep from workspace
ark-std = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
blake3 = { workspace = true }
commit = { workspace = true }
custom_debug = { workspace = true }
derivative = "2.2.0"
digest = { workspace = true }
displaydoc = { version = "0.2.3", default-features = false }
ed25519-compact = { version = "2.0.4", optional = true }
either = { workspace = true, features = ["serde"] }
espresso-systems-common = { workspace = true }
futures = { workspace = true }
generic-array = "0.14.7"
hex_fmt = "0.3.0"
hotshot-utils = { path = "../utils" }
hotshot-task = { path = "../task", default-features = false }
hotshot-primitives = { workspace = true }
jf-primitives = { workspace = true }
nll = { workspace = true }
libp2p-networking = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.2.4" }
time = { workspace = true }
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tracing = { workspace = true }
ethereum-types = { workspace = true }
bit-vec = "0.6.3"
typenum = { workspace = true }

[dev-dependencies]
serde_json = "1.0.105"
