[package]
name = "hotshot-web-server"
description = "HotShot web server"
version = "0.1.1"
readme = "README.md"
edition = "2021"

[features]
default = []
full-ci = ["async-std-executor", "channel-async-std", "demo"]
tokio-ci = ["tokio-executor", "channel-tokio", "demo"]
demo = ["hotshot-types/demo"]
async-std-executor = [
    "dep:async-std",
    "hotshot-types/async-std-executor",
    "async-compatibility-layer/async-std-executor",
]
tokio-executor = [
    "dep:tokio",
    "hotshot-types/tokio-executor",
    "async-compatibility-layer/tokio-executor",
]
profiling = ["async-compatibility-layer/profiling"]
channel-flume = ["hotshot-types/channel-flume", "async-compatibility-layer/channel-flume"]
channel-tokio = ["hotshot-types/channel-tokio", "async-compatibility-layer/channel-tokio"]
channel-async-std = [
    "hotshot-types/channel-async-std",
    "async-compatibility-layer/channel-async-std",
]

[dependencies]
ark-bls12-381 = { version = "0.3.0" }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.2.0", default-features = false }
async-lock = "2.7"
async-std = { version = "1.12", optional = true }
async-trait = "0.1.68"
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"], optional = false }
futures = "0.3.28"
libp2p-core = { version = "0.39.2", default-features = false }
hotshot-types = { path = "../types", default-features = false }
hotshot-utils = { path = "../utils"}
hotshot-primitives = { git = "https://github.com/EspressoSystems/hotshot-primitives",  rev = "c99b58d"} # rev after downgrade: rev = "b22c7f2" branch = 'update_jellyfish_0.4.0_pre.0'
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", rev = "c07a87f"} # downgrade rev = "36dceb63", branch = 'downgrade-curve25519'
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", tag = "v0.4.1" }
nll = { git = "https://github.com/EspressoSystems/nll.git" }
tracing = "0.1.37"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
snafu = "0.7.4"
tide = { version = "0.16.0", default-features = false }
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
toml = "0.5.9"
portpicker = "0.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco.git", tag = "v0.4.1" }
ethereum-types = { version = "0.14.1", features = ["impl-serde"] }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "atomic", "serde"] }
blake3 = { version = "1.3.3", optional = true, features = ["traits-preview"] }

[dev-dependencies]
hotshot-types = { path = "../types", default-features = false }
